--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
+
+
+# dotenv environment variable files
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+
+### Vercel ###
 .vercel
+
