json web token install

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "summer-wonderland-server",
+  "name": "summer-camp-server-side",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
